# tap-guildquality

./: .env.example  .gitignore  README.md  meltano.yml  pyproject.toml
tap_guildquality/: __init__.py  __main__.py  client.py  tap.py
tap_guildquality/streams/: __init__.py  reference.py  reviews.py  surveys.py
tests/: __init__.py  test_core.py
