[project]
name = "tap-guildquality"
version = "0.0.1"
description = "Singer tap for the GuildQuality company API, built with the Meltano Singer SDK."
authors = [ { name = "Vertex Service Partners", email = "data@vertexservicepartners.com" } ]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = ["ELT", "GuildQuality"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "singer-sdk~=0.54.5",
    "requests~=2.32.3",
]

[project.optional-dependencies]
s3 = [ "s3fs" ]

[project.scripts]
tap-guildquality = "tap_guildquality.tap:TapGuildQuality.cli"

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=8",
    "singer-sdk[testing]",
]

[tool.hatch.build.targets.sdist]
include = [ "tap_guildquality" ]

[tool.hatch.build.targets.wheel]
include = [ "tap_guildquality" ]

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
src = ["tap_guildquality"]
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
    "FIX",    # allow TODO comments
    "ERA",    # allow commented-out code
]
select = [ "ALL" ]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "S101", # asserts in pytest functions is OK
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = [ "tap_guildquality" ]

[tool.ruff.lint.pydocstyle]
convention = "google"
